feat: 온보딩 페이지

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=<%= VITE_KAKAO_MAP %>"></script>
-
+    <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=<%= VITE_KAKAO_MAP %>"></script>
   </body>
 </html>
